--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 ParallelStencil = "94395366-693c-11ea-3b26-d9b7aac5d958"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
